services/allk8s/common-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common
  labels:
    app: common
spec:
  replicas: 1
  template:
    metadata:
      name: common
      labels:
        app: common
    spec:
      containers:
      - name: mongo
        image: registry.cn-beijing.aliyuncs.com/rxjava/mongo:3.7.3-jessie
        imagePullPolicy: IfNotPresent
      - name: redis
        image: registry.cn-beijing.aliyuncs.com/rxjava/redis:4.0.4-alpine
        imagePullPolicy: IfNotPresent
      - name: rabbitmq
        image: registry.cn-beijing.aliyuncs.com/rxjava/rabbitmq:3.7.5-management
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: common
---
apiVersion: v1
kind: Service
metadata:
  name: common
spec:
  selector:
    app: common
  ports:
    - name: mongodb
      port: 27017
      protocol: TCP
      targetPort: 27017
    - name: rabbitmq
      port: 5672
      protocol: TCP
      targetPort: 5672
  type: NodePort
