services/allk8s/service-card-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-card
  labels:
    app: service-card
spec:
  replicas: 1
  template:
    metadata:
      name: service-card
      labels:
        app: service-card
    spec:
      containers:
        - name: service-card
          image: registry.cn-shanghai.aliyuncs.com/taro-mall/service-card:latest
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: service-card
---
apiVersion: v1
kind: Service
metadata:
  name: service-card
spec:
  selector:
    app: service-card
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: NodePort
