services/allk8s/service-goods-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-goods
  labels:
    app: service-goods
spec:
  replicas: 1
  template:
    metadata:
      name: service-goods
      labels:
        app: service-goods
    spec:
      containers:
        - name: service-goods
          image: registry.cn-shanghai.aliyuncs.com/taro-mall/service-goods:latest
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: service-goods
---
apiVersion: v1
kind: Service
metadata:
  name: service-goods
spec:
  selector:
    app: service-goods
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: NodePort
