services/allk8s/service-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-manager
  labels:
    app: service-manager
spec:
  replicas: 1
  template:
    metadata:
      name: service-manager
      labels:
        app: service-manager
    spec:
      containers:
        - name: service-manager
          image: registry.cn-shanghai.aliyuncs.com/taro-mall/service-manager:latest
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: service-manager
---
apiVersion: v1
kind: Service
metadata:
  name: service-manager
spec:
  selector:
    app: service-manager
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: NodePort
