services/allk8s/service-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user
  labels:
    app: service-user
spec:
  replicas: 1
  template:
    metadata:
      name: service-user
      labels:
        app: service-user
    spec:
      containers:
        - name: service-user
          image: registry.cn-shanghai.aliyuncs.com/taro-mall/service-user:latest
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: service-user
---
apiVersion: v1
kind: Service
metadata:
  name: service-user
spec:
  selector:
    app: service-user
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: NodePort
