services/allk8s/gateway-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-admin
  labels:
    app: gateway-admin
spec:
  replicas: 1
  template:
    metadata:
      name: gateway-admin
      labels:
        app: gateway-admin
    spec:
      containers:
        - name: gateway-admin
          image: registry.cn-shanghai.aliyuncs.com/taro-mall/gateway-admin:latest
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: gateway-admin
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-admin
spec:
  selector:
    app: gateway-admin
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-admin
spec:
  rules:
    - host: admin.example.com
      http:
        paths:
          - backend:
              serviceName: gateway-admin
              servicePort: 80
