services/allk8s/manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  labels:
    app: manager
spec:
  replicas: 1
  template:
    metadata:
      name: manager
      labels:
        app: manager
    spec:
      containers:
        - name: manager
          image: registry.cn-shanghai.aliyuncs.com/taro-mall/manager:latest
          imagePullPolicy: Always
      restartPolicy: Always
  selector:
    matchLabels:
      app: manager
---
apiVersion: v1
kind: Service
metadata:
  name: manager
spec:
  selector:
    app: manager
  ports:
    - port: 81
      protocol: TCP
      targetPort: 80
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: manager
spec:
  rules:
    - host: manager.example.com
      http:
        paths:
          - backend:
              serviceName: manager
              servicePort: 81
